# urban-dictionary-plugin

./: Cargo.toml
src/: lib.rs
